Fixing too wide link in card-link

--- a/src/components/card-link/card-link.module.css
+++ b/src/components/card-link/card-link.module.css
@@ -32,3 +32,8 @@ style applied to anchor elements.
     cursor: pointer;
   }
 }
+
+.link {
+  display: block;
+  width: fit-content;
+}
